--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project template for projects that do not require bundling.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint",
+    "format": "npx prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/harithkhan/non-bundle-template/issues"
   },
-  "homepage": "https://github.com/harithkhan/non-bundle-template#readme"
+  "homepage": "https://github.com/harithkhan/non-bundle-template#readme",
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.5.0"
+  }
 }
