chore: install nodemon

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "prettier": "^3.5.0"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.9"
   }
 }
