--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jest": "^29.7.0",
     "prettier": "^3.5.0"
   },
   "dependencies": {
