--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "npx eslint",
-    "format": "npx prettier . --write"
+    "format": "npx prettier . --write",
+    "watch": "jest --watch *.js"
   },
   "repository": {
     "type": "git",
