chore: update eslint to allow for testing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,14 @@
     "parserOptions": {
         "ecmaVersion": 2022,
         "sourceType": "module" 
-    }
+    },
+    "overrides": [
+        {
+        "files": ["tests/**/*"],
+        "plugins": ["jest"],
+        "env": {
+            "jest/globals": true
+        }
+        }
+    ]
 }
