--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "npx eslint",
+    "lint": "npx eslint .",
     "format": "npx prettier . --write",
     "watch": "jest --watch *.js"
   },
