--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,16 @@
         "no-console": "off", 
         "import/prefer-default-export": "off", 
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
-        "import/extensions": ["error", "ignorePackages"] 
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+          ]
     },
     "env": {
         "browser": true, 
